# ipai-hackathon

./: .gitignore  README.md  commands.txt
ai/: commands.txt  pyproject.toml
config/: infer_config.yaml  train_config.yaml
infer/: bugs.txt  commands.json  gui.py  gui_config.yaml  infer.py  infer_config.yaml  infer_config_lora.yaml  infer_config_old.yaml  infer_lora.py  infer_old.py  model_client.py  policy_server.py  policy_server_lora.py  positions.json  robot_client.py  sequence_runner.py  sequence_ui.py  test_inference.py
infer/old/: infer.py  infer_config.yaml  infer_config_old.yaml  infer_old.py  policy_server.py  test_inference.py
infer/sequences/: 2steps.json
lerobot_teleop/: calibrate_follower.sh  calibrate_leader.sh  record.sh  replay.sh  teleop-mit-3cam.sh  teleop-mit-cam.sh  teleop.sh  upload.py
train/: data.py  data_config.yaml  list_tasks.py  run.sh  train.py  train_config.yaml  train_old.py
