[build-system]
requires = ["setuptools>=71.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ipai-smolvla"
version = "0.1.0"
description = "IPAI AI & Robotics Hackathon - SmolVLA Training"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "lerobot[smolvla]>=0.5.1",
    "wandb>=0.24.0,<0.25.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.0",
    "pytest>=8.1.0,<9.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["train*", "infer*", "model*", "data*"]

[tool.ruff]
target-version = "py312"
line-length = 110
